tests/machine/x/clj/save_jsonl_stdout.error
exit status 1
Syntax error (ClassNotFoundException) compiling new at (/workspace/mochi/tests/machine/x/clj/save_jsonl_stdout.clj:35:20).
org.yaml.snakeyaml.Yaml

Full report at:
/tmp/clojure-14821202054107067136.edn
